--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
         </div>
 
-        <h3>Welcome to GitHub Pages.</h3>
+        <h3>Welcome!</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>This project is something I work on during my spare time! (This is something I don't have a lot of :P )</p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
