--- a/index.html
+++ b/index.html
@@ -43,10 +43,7 @@
 <p>This project is something I work on during my spare time! (This is something I don't have a lot of :P )</p>
 
 
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>Designer Templates</h3>
+<h3>Right... ok,so what does it actually do?</h3>
 
 <p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
 
