--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 <p>This project is something I work on during my spare time! (This is something I don't have a lot of :P )</p>
 
 
-<h3>Right... ok,so what does it actually do?</h3>
+<h3>Right... ok, so what does it actually do?</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<p>This PHP library enables you to let guests sign in to your site using their steam account!</p>
 
-<h3>Rather Drive Stick?</h3>
+<h3>Sounds Great! How do I add it to my Site?</h3>
 
 <p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
 
