--- a/index.html
+++ b/index.html
@@ -49,7 +49,14 @@
 
 <h3>Sounds Great! How do I add it to my Site?</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>
+  1. First of all get the latest download by clicking the "ZIP" or "TAR" button at te top of the page.
+  2. Add the following to the top of your page: </p>
+<pre><code>
+  <?php
+  require 'steamauth/steamauth.php'; 
+  ?>
+</code></pre>
 
 <h3>Authors and Contributors</h3>
 
@@ -57,7 +64,7 @@
 
 <h3>Support or Contact</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>Having trouble with SteamAuthentication? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or submit an issue <a href="https://github.com/SmItH197/SteamAuthentication/issues/new">here</a> and we’ll help you sort it out.</p>
       </section>
 
     </div>
