--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
   1. First of all get the latest download by clicking the "ZIP" or "TAR" button at te top of the page.
   2. Add the following to the top of your page: </p>
 <pre><code>
+test
   <?php
   require 'steamauth/steamauth.php'; 
   ?>
