--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
 <p>
   1. First of all get the latest download by clicking the "ZIP" or "TAR" button at te top of the page.
   2. Add the following to the top of your page (inside php tags): </p>
-<pre><code>
-require 'steamauth/steamauth.php'; 
-</code></pre>
+<pre><code>require 'steamauth/steamauth.php'; </code></pre>
 
 <h3>Authors and Contributors</h3>
 
