--- a/index.html
+++ b/index.html
@@ -50,9 +50,12 @@
 <h3>Sounds Great! How do I add it to my Site?</h3>
 
 <p>
-  1. First of all get the latest download by clicking the "ZIP" or "TAR" button at te top of the page.
+  1. First of all get the latest download by clicking the "ZIP" or "TAR" button at te top of the page. </br>
   2. Add the following to the top of your page (inside php tags): </p>
 <pre><code>require 'steamauth/steamauth.php'; </code></pre>
+<p>
+  3. test
+</p>
 
 <h3>Authors and Contributors</h3>
 
