--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <p>
   1. First of all get the latest download by clicking the "ZIP" or "TAR" button at te top of the page. </br>
   2. Add the following to the top of your page (inside php tags): </p>
-<pre><code>require 'steamauth/steamauth.php'; </code></pre>
+<pre><code>require ('steamauth/steamauth.php'); </code></pre>
 <p>
   3. test
 </p>
